# celestia-zkevm

./: .env.example  .gitignore  Cargo.toml  Makefile  README.md  buf.work.yaml  build-local.sh  docker-compose.yml  fix-relayer-config.sh  query.sh  run-spamoor.sh  spamoor-config.yaml  test-native-minter.sh
configs/: core-config.yaml  warp-config.yaml
contracts/: README.md  foundry.toml
crates/block-prover/: Cargo.toml
crates/block-prover/src/: main.rs
crates/celestia-grpc-client/: Cargo.toml  README.md  build.rs
crates/celestia-grpc-client/proto/: buf.yaml
crates/celestia-grpc-client/proto/celestia/zkism/v1/: events.proto  query.proto  tx.proto  types.proto
crates/celestia-grpc-client/proto/hyperlane/core/v1/: ism_hooks.proto
crates/celestia-grpc-client/src/: client.rs  error.rs  hyperlane_messages.rs  lib.rs  message.rs  proto.rs  types.rs
crates/celestia-grpc-client/src/proto/: celestia.zkism.v1.rs  celestia.zkism.v1.tonic.rs  mod.rs
crates/e2e/: Cargo.toml  DEVNET.md  README.md
crates/e2e/src/: config.rs
crates/e2e/src/prover/: block.rs  evm.rs  helpers.rs  message.rs  mod.rs
crates/e2e/src/utils/: block.rs  message.rs  mod.rs
crates/ev-client/: Cargo.toml
crates/ev-client/src/: lib.rs
crates/ev-exec/: Cargo.toml
crates/ev-exec/src/: lib.rs
crates/ev-prover/: .dockerignore  Cargo.toml  Dockerfile  README.md  build.rs
crates/ev-prover/proto/: buf.gen.yaml  buf.yaml
crates/ev-prover/proto/prover/v1/: prover.proto
crates/ev-prover/src/: celestia_client.rs  lib.rs  main.rs  tests_storage.rs
crates/ev-prover/src/celestia/: client.rs  error.rs  lumina_compat.rs  message.rs  mod.rs  types.rs
crates/ev-prover/src/command/: cli.rs  command.rs  mod.rs
crates/ev-prover/src/commands/: cli.rs  command.rs
crates/ev-prover/src/config/: config.rs  mod.rs
crates/ev-prover/src/grpc/: server.rs
crates/ev-prover/src/proof_system/: mod.rs  risc0.rs  sp1.rs
crates/ev-prover/src/proto/: celestia.prover.v1.rs  celestia.prover.v1.tonic.rs
crates/ev-prover/src/prover/: config.rs  mod.rs  service.rs  sync.rs
crates/ev-prover/src/prover/programs/: batch.rs  block.rs  combined.rs  message.rs  mod.rs  range.rs
crates/ev-prover/src/server/: mod.rs
crates/ev-prover/src/storage/: proof_storage.rs
crates/ev-prover/src/tests/: mod.rs  risc0.rs  storage.rs
crates/ev-prover/tests/: integration.rs
crates/ev-state-queries/: Cargo.toml
crates/ev-state-queries/src/: lib.rs
crates/ev-state-queries/src/hyperlane/: indexer.rs  mod.rs
crates/ev-state-queries/tests/: integration.rs
crates/ev-zkevm-types/: Cargo.toml
crates/ev-zkevm-types/src/: hyperlane.rs  lib.rs
crates/ev-zkevm-types/src/programs/: block.rs  combined.rs  mod.rs
crates/ev-zkevm-types/src/programs/hyperlane/: mod.rs  tree.rs  types.rs
crates/evm-prover/: Cargo.toml  DOCKER.md  Dockerfile  README.md  build.rs  config.yaml  docker-entrypoint.sh
crates/evm-prover/examples/: grpc_client_example.rs  proof_storage_demo.rs
crates/evm-prover/src/: main.rs  script.rs  tests_storage.rs
crates/evm-prover/src/commands/: cli.rs  command.rs
crates/evm-prover/src/config/: config.rs
crates/evm-prover/src/grpc/: server.rs
crates/evm-prover/src/proto/: celestia.prover.v1.rs
crates/evm-prover/src/prover/: block.rs  integration_tests.rs  mod.rs  prover.rs  range.rs  service.rs
crates/evm-prover/src/prover/circuits/: block.rs
crates/evm-prover/src/prover/programs/: block.rs  message.rs  mod.rs  range.rs  types.rs
crates/evm-prover/src/storage/: mod.rs  proof_storage.rs  storage.rs  tests.rs
crates/evm-prover/tests/: integration.rs
crates/evm-state-queries/: Cargo.toml
crates/evm-state-queries/src/: lib.rs  main.rs
crates/evm-state-queries/src/hyperlane/: indexer.rs  mod.rs
crates/evm-state-queries/tests/: integration.rs
crates/evm-storage-proofs/: Cargo.toml
crates/evm-storage-proofs/src/: client.rs  lib.rs  types.rs
crates/risc0/: Cargo.toml  INPUT_CONVERSION.md  README.md  RISC0_CONSTANTS.rs  STATUS.md
crates/risc0/ev-exec/guest/: Cargo.toml
crates/risc0/ev-exec/guest/src/: lib.rs  main.rs
crates/risc0/ev-exec/host/: Cargo.toml  build.rs
crates/risc0/ev-exec/host/src/: lib.rs  main.rs
crates/risc0/ev-exec/host/tests/: basic.rs
crates/risc0/ev-exec/methods/guest/: Cargo.toml
crates/risc0/ev-exec/methods/guest/src/: main.rs
crates/risc0/ev-hyperlane/guest/: Cargo.toml
crates/risc0/ev-hyperlane/guest/src/: lib.rs
crates/risc0/ev-hyperlane/host/: Cargo.toml  build.rs
crates/risc0/ev-hyperlane/host/src/: lib.rs
crates/risc0/ev-hyperlane/host/tests/: basic.rs
crates/risc0/ev-range-exec/guest/: Cargo.toml
crates/risc0/ev-range-exec/guest/src/: lib.rs  main.rs
crates/risc0/ev-range-exec/host/: Cargo.toml
crates/risc0/ev-range-exec/host/src/: lib.rs
crates/risc0/ev-range-exec/host/tests/: basic.rs
crates/sp1/ev-combined/program/: Cargo.toml
crates/sp1/ev-combined/program/src/: main.rs
crates/sp1/ev-combined/script/: Cargo.toml  build.rs
crates/sp1/ev-exec/program/: Cargo.toml
crates/sp1/ev-exec/program/src/: main.rs
crates/sp1/ev-hyperlane-types/: Cargo.toml
crates/sp1/ev-hyperlane-types/src/: lib.rs
crates/sp1/ev-hyperlane/script/: Cargo.toml
crates/sp1/evm-exec-types/: Cargo.toml
crates/sp1/evm-exec-types/src/: hex_bytes.rs  lib.rs
crates/sp1/evm-exec/program/: Cargo.toml
crates/sp1/evm-exec/program/src/: main.rs
crates/sp1/evm-exec/script/: Cargo.toml
crates/sp1/evm-hyperlane-types/: Cargo.toml
crates/sp1/evm-hyperlane-types/src/: lib.rs  tree.rs
crates/sp1/evm-hyperlane/script/: Cargo.toml
crates/sp1/evm-range-exec/program/: Cargo.toml
crates/sp1/evm-range-exec/program/src/: main.rs
crates/sp1/evm-range-exec/script/: Cargo.toml  build.rs
crates/storage/: Cargo.toml
crates/storage/src/: lib.rs  proofs.rs
crates/storage/src/hyperlane/: message.rs  mod.rs  snapshot.rs
crates/storage/src/hyperlane_messages/: mod.rs  storage.rs
devnet/: export.sh  import.sh  prune.sh
docs/: ARCHITECTURE.md  CONTRIBUTING.md  MERKLE_INCLUSION_PROOF_SPEC.md
elfs/: ev-hyperlane-elf  ev-range-exec-elf
(+264 files in other folders)
