[workspace]
members = [
    "crates/evm-prover",
    "crates/sp1/evm-exec/program",
    "crates/sp1/evm-exec/script",
    "crates/sp1/evm-exec-types",
    "crates/sp1/evm-range-exec/program",
    "crates/sp1/evm-range-exec/script",
]
resolver = "2"

[workspace.dependencies]
alloy-consensus = { version = "1.0.13" }
alloy-genesis = { version = "1.0.13", default-features = false }
alloy-primitives = { version = "1.2.0", default-features = false, features = [
    "sha3-keccak",
    "map-foldhash",
] }
alloy-provider = { version = "1.0.13", default-features = false, features = [
    "reqwest",
    "reqwest-rustls-tls",
] }
alloy-rlp = "0.3.10"
base64 = "0.22.1"
bincode = "1.3.3"
bytes = "1.10.1"
celestia-rpc = "=0.11.1"
celestia-types = "=0.11.2"
ed25519-dalek = { version = "2.1.0", features = ["alloc", "serde"] }
eq-common = "0.1.4"
ethers = { version = "2.0", features = ["ws", "rustls"] }
ev-client = { git = "https://github.com/evstack/ev-node.git", rev = "c5be508c2dbf17645a009d348705c444c56ff934", package = "ev-client", default-features = false }
ev-types = { git = "https://github.com/evstack/ev-node.git", rev = "c5be508c2dbf17645a009d348705c444c56ff934", package = "ev-types", default-features = false }
hex = "0.4.3"
nmt-rs = "*"
prost = "0.12"
reqwest = "0.12.20"
reth-chainspec = { git = "https://github.com/paradigmxyz/reth", tag = "v1.5.0", default-features = false }
reth-primitives = { git = "https://github.com/paradigmxyz/reth", tag = "v1.5.0", default-features = false }
rsp-client-executor = { git = "https://github.com/succinctlabs/rsp.git", tag = "reth-1.5.0" }
rsp-host-executor = { git = "https://github.com/succinctlabs/rsp.git", tag = "reth-1.5.0" }
rsp-primitives = { git = "https://github.com/succinctlabs/rsp.git", tag = "reth-1.5.0" }
rsp-rpc-db = { git = "https://github.com/succinctlabs/rsp.git", tag = "reth-1.5.0" }
serde = "1.0"
serde_cbor = "0.11.2"
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
sha3 = "0.10"
sp1-build = "=5.0.8"
sp1-core-executor = { version = "=5.0.8", features = ["bigint-rug"] }
sp1-sdk = "=5.0.8"
sp1-zkvm = "=5.0.8"
tendermint = "0.40.1"
tendermint-proto = "*"

[patch.crates-io]
# Add support for precompiles: https://docs.succinct.xyz/docs/sp1/optimizing-programs/precompiles
sha2 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", tag = "patch-sha2-0.10.9-sp1-4.0.0", package = "sha2" }
bn = { git = "https://github.com/sp1-patches/bn", tag = "patch-0.6.0-sp1-5.0.0", package = "substrate-bn" }
sha3 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", tag = "patch-sha3-0.10.8-sp1-4.0.0" }
k256 = { git = "https://github.com/sp1-patches/elliptic-curves", tag = "patch-k256-13.4-sp1-5.0.0" }
p256 = { git = "https://github.com/sp1-patches/elliptic-curves", tag = "patch-p256-13.2-sp1-5.0.0" }
curve25519-dalek = { git = "https://github.com/sp1-patches/curve25519-dalek", tag = "patch-4.1.3-sp1-5.0.0" }
