[workspace]
members = [
    "crates/ev-prover",
    "crates/ev-state-queries",
    "crates/ev-state-types",
    "crates/ev-storage-proofs",
    "crates/ev-storage-proofs",
    "crates/sp1/ev-exec-types",
    "crates/sp1/ev-exec/program",
    "crates/sp1/ev-exec/script",
    "crates/sp1/ev-hyperlane-types",
    "crates/sp1/ev-hyperlane/program",
    "crates/sp1/ev-hyperlane/script",
    "crates/sp1/ev-range-exec/program",
    "crates/sp1/ev-range-exec/script",
    "crates/storage",
]
resolver = "2"

[workspace.dependencies]
alloy-consensus = { version = "1.0.13" }
alloy-genesis = { version = "1.0.13", default-features = false }
alloy-primitives = { version = "1.2.0", default-features = false, features = [
    "sha3-keccak",
    "map-foldhash",
] }
alloy-provider = { version = "1.0.13", default-features = false, features = [
    "reqwest",
    "reqwest-rustls-tls",
] }
alloy-rlp = "0.3.10"
alloy-rpc-types = { version = "1.0.27", default-features = false, features = [
    "eth",
] }
anyhow = { version = "1.0", default-features = false }
base64 = "0.22.1"
bincode = "1.3.3"
bytes = "1.10.1"
celestia-rpc = "=0.13.0"
celestia-types = "=0.15.0"
ed25519-dalek = { version = "2.1.0", features = ["alloc", "serde"] }
ethers = { version = "2.0", features = ["ws", "rustls"] }
ev-hyperlane-types = { package = "ev-hyperlane-types", path = "crates/sp1/ev-hyperlane-types" }
ev-state-queries = { path = "crates/ev-state-queries" }
ev-state-types = { path = "crates/ev-state-types" }
ev-storage-proofs = { path = "crates/ev-storage-proofs" }
ev-types = { version = "0.0.1", default-features = false }
hex = "0.4.3"
jsonrpsee-core = "0.25.1"
nmt-rs = "*"
prost = "0.12"
reqwest = "0.12.20"
reth-chainspec = { git = "https://github.com/paradigmxyz/reth", tag = "v1.5.0", default-features = false }
reth-primitives = { git = "https://github.com/paradigmxyz/reth", tag = "v1.5.0", default-features = false }
rsp-client-executor = { git = "https://github.com/succinctlabs/rsp.git", tag = "reth-1.5.0" }
rsp-host-executor = { git = "https://github.com/succinctlabs/rsp.git", tag = "reth-1.5.0" }
rsp-primitives = { git = "https://github.com/succinctlabs/rsp.git", tag = "reth-1.5.0" }
rsp-rpc-db = { git = "https://github.com/succinctlabs/rsp.git", tag = "reth-1.5.0" }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_cbor = "0.11.2"
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
sha3 = "0.10"
sp1-build = "=5.2.1"
sp1-core-executor = { version = "=5.2.1", features = ["bigint-rug"] }
sp1-sdk = { version = "=5.2.1", features = ["native-gnark"] }
sp1-zkvm = "=5.2.1"
storage = { path = "crates/storage" }
tendermint = "0.40.1"
tendermint-proto = "*"
tokio = { version = "1.45.0", features = [
    "sync",
    "macros",
    "io-util",
    "rt",
    "time",
    "rt-multi-thread",
], default-features = false }
tracing = "0.1.40"

[patch.crates-io]
# Add support for precompiles: https://docs.succinct.xyz/docs/sp1/optimizing-programs/precompiles
sha2 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", tag = "patch-sha2-0.10.9-sp1-4.0.0", package = "sha2" }
bn = { git = "https://github.com/sp1-patches/bn", tag = "patch-0.6.0-sp1-5.0.0", package = "substrate-bn" }
sha3 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", tag = "patch-sha3-0.10.8-sp1-4.0.0" }
k256 = { git = "https://github.com/sp1-patches/elliptic-curves", tag = "patch-k256-13.4-sp1-5.0.0" }
p256 = { git = "https://github.com/sp1-patches/elliptic-curves", tag = "patch-p256-13.2-sp1-5.0.0" }
curve25519-dalek = { git = "https://github.com/sp1-patches/curve25519-dalek", tag = "patch-4.1.3-sp1-5.0.0" }
