[package]
edition = "2024"
version = "0.1.0"
name = "block-prover"

[dependencies]
alloy-provider = { workspace = true }
anyhow = "1.0"
base64 = "0.22.1"
bincode = { workspace = true }
celestia-types = { workspace = true }
celestia-rpc = { workspace = true }
clap = { version = "4.0", features = ["derive", "env"] }
eq-common = { workspace = true }
ethers = { version = "2.0", features = ["ws", "rustls"] }
eyre = "0.6.12"
hex = "0.4.3"
nmt-rs = { workspace = true }
reqwest = "0.12.15"
reth-chainspec = { workspace = true }
rsp-primitives = { workspace = true }
rsp-client-executor = { workspace = true }
rsp-host-executor = { workspace = true }
rsp-rpc-db = { workspace = true }
serde = { workspace = true, features = ["derive", "std"] }
serde_json = "1.0"
sha3 = { workspace = true }
tendermint = { workspace = true }
tendermint-proto = { workspace = true }
tracing = "0.1.40"
tokio = { version = "1.44", features = ["full"] }
tokio-retry = "0.3"
