[package]
name = "celestia-grpc-client"
version = "0.1.0"
edition = "2021"
description = "gRPC client for submitting proofs to Celestia consensus network"

[dependencies]
anyhow = { workspace = true }
async-trait = "0.1"
bech32 = { workspace = true }
bytes = { workspace = true }
celestia-grpc = { workspace = true }
celestia-types = { workspace = true }
clap = { version = "4", features = ["derive"] }
ed25519-dalek = { workspace = true }
hex = { workspace = true }
k256 = "0.13"
md5 = "0.7"
prost = "0.13"
prost-types = "0.13"
rustls = { version = "0.23", features = ["aws_lc_rs"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha2 = "0.10"
tendermint = { workspace = true }
tendermint-proto = { workspace = true }
thiserror = "1.0"
tokio = { workspace = true }
tonic = "0.12"
tracing = { workspace = true }
tracing-subscriber = "0.3"

[features]

[dev-dependencies]
tempfile = "3.8"
tokio-test = "0.4"

[build-dependencies]
prost-build = "0.13"
tonic-build = "0.13"

[[bin]]
name = "proof_submitter"
path = "src/bin/proof_submitter.rs"
