[package]
name = "e2e"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "message-prover"
path = "src/bin/message.rs"

[[bin]]
name = "block-prover"
path = "src/bin/message.rs"

[dependencies]
anyhow = { workspace = true }
alloy-genesis = { workspace = true }
alloy-primitives = { workspace = true }
alloy-provider = { workspace = true }
alloy-rpc-types = { workspace = true }
alloy-sol-types = { workspace = true }
dirs = { workspace = true }
dotenvy = { workspace = true }
ev-state-queries = { workspace = true }
ev-zkevm-types = { workspace = true }
sp1-sdk = { workspace = true }
storage = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }
url = { workspace = true }
ev-prover = { workspace = true }
celestia-rpc = { workspace = true }
celestia-types = { workspace = true }
ev-types = { workspace = true, features = ["grpc"] }
reth-chainspec = { workspace = true }
rsp-client-executor = { workspace = true }
rsp-host-executor = { workspace = true }
prost = { workspace = true }
eyre = "0.6.12"
rsp-primitives = { workspace = true }
rsp-rpc-db = { workspace = true }
serde_json = { workspace = true, default-features = false, features = [
    "alloc",
] }
