[package]
name = "ev-client"
version = "0.1.0"
edition = "2021"
description = "EVM client for interacting with the rollup and Hyperlane contracts"

[dependencies]
alloy = { workspace = true, features = ["full"] }
alloy-primitives = { workspace = true }
alloy-sol-types = { workspace = true }
anyhow = { workspace = true }
clap = { version = "4", features = ["derive"] }
hex = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = "0.3"

[dev-dependencies]
tempfile = { workspace = true }

[[bin]]
name = "transfer_back"
path = "src/bin/transfer_back.rs"
