[package]
name = "ev-prover"
version = "0.1.0"
edition = "2021"

[features]
default = ["sp1"]
sp1 = ["dep:sp1-sdk", "sp1-build"]
# NOTE: RISC0 support is currently limited due to workspace crypto patch conflicts
# The RISC0 backend is implemented but guest/host crates must be built separately
risc0 = ["dep:risc0-zkvm", "dep:zeth-host", "dep:zeth-core"]

[dependencies]
alloy = { workspace = true }
alloy-genesis = { workspace = true }
alloy-primitives = { workspace = true }
alloy-provider = { workspace = true }
alloy-rpc-types = { workspace = true }
anyhow = "1.0"
async-trait = "0.1.88"
bincode = { workspace = true }
bytes = { workspace = true }
celestia-rpc = { workspace = true }
celestia-types = { workspace = true }
clap = { version = "4", features = ["derive"] }
dirs = { workspace = true }
dotenvy = { workspace = true }
ev-state-queries = { workspace = true }
ev-types = { workspace = true, features = ["grpc"] }
ev-zkevm-types = { workspace = true }
# NOTE: RISC0 host crates excluded from workspace due to crypto patch conflicts
# The RISC0 backend is implemented but ImageIDs must be provided via config
# ev-exec-host = { path = "../risc0/ev-exec/host", optional = true }
# ev-hyperlane-host = { path = "../risc0/ev-hyperlane/host", optional = true }
# ev-range-exec-host = { path = "../risc0/ev-range-exec/host", optional = true }
hex = { workspace = true }
jsonrpsee-core = { workspace = true }
nmt-rs = { workspace = true }
prost = { workspace = true }
reqwest = { workspace = true }
reth-chainspec = { workspace = true }
risc0-zkvm = { workspace = true, optional = true }
rocksdb = "0.24"
rsp-client-executor = { workspace = true }
rsp-host-executor = { workspace = true }
rsp-primitives = { workspace = true }
rsp-rpc-db = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_cbor = { workspace = true }
# Zeth dependencies for RISC0 backend
zeth-host = { path = "../../../zeth/crates/host", optional = true }
zeth-core = { path = "../../../zeth/crates/core", optional = true }
serde_json = { workspace = true }
serde_yaml = "0.9"
sha3 = { workspace = true }
sp1-sdk = { workspace = true, optional = true }
storage = { workspace = true }
tendermint = { workspace = true }
tendermint-proto = { workspace = true }
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tonic = { version = "0.10", features = ["transport"] }
tonic-reflection = "0.10"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[build-dependencies]
sp1-build = { workspace = true, optional = true }

[dev-dependencies]
tempfile = { workspace = true }
