[package]
name = "evm-prover"
version = "0.1.0"
edition = "2021"

[dependencies]
evm-exec-types = { path = "../sp1/evm-exec-types" }
anyhow = "1.0"
alloy-genesis = { workspace = true }
alloy-primitives = { workspace = true }
alloy-provider = { workspace = true }
async-trait = "0.1.88"
bincode = { workspace = true }
bytes = { workspace = true }
celestia-types = { workspace = true }
celestia-rpc = { workspace = true }
clap = { version = "4", features = ["derive"] }
dirs = "5"
ev-types = { workspace = true, features = ["grpc"] }
hex = { workspace = true }
jsonrpsee-core = { workspace = true }
nmt-rs = { workspace = true }
prost = { workspace = true }
reqwest = { workspace = true }
reth-chainspec = { workspace = true }
rsp-client-executor = { workspace = true }
rsp-host-executor = { workspace = true }
rsp-primitives = { workspace = true }
rsp-rpc-db = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_cbor = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"
sha3 = { workspace = true }
sp1-sdk = { workspace = true }
tendermint = { workspace = true }
tendermint-proto = { workspace = true }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tonic = { version = "0.10", features = ["transport"] }
tonic-reflection = "0.10"

[build-dependencies]
prost-build = "0.12"
sp1-build = { workspace = true }
tonic-build = "0.10"
walkdir = "2.5.0"
