[package]
name = "evm-state-queries"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenvy = "0.15.7"
storage = { workspace = true }
anyhow = { workspace = true }
alloy-sol-types = "1.3"
alloy-trie = { version = "0.7.9", default-features = false }
alloy-provider = { version = "1.0.2", default-features = false, features = [
    "ws",
] }
alloy-rpc-types = { version = "1.0.27", default-features = false, features = [
    "eth",
] }
tokio-stream = { version = "0.1.17", default-features = false }
alloy-consensus = { workspace = true }
alloy-primitives = { workspace = true }
alloy-rlp = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
url = { version = "2.5", default-features = false }
evm-state-types = { workspace = true }
