[package]
name = "evm-state-queries"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy-consensus = { workspace = true }
alloy-primitives = { workspace = true }
alloy-provider = { version = "1.0.2", default-features = false, features = [
    "ws",
] }
alloy-rlp = { workspace = true }
alloy-rpc-types = { workspace = true }
alloy-sol-types = "1.3"
alloy-trie = { version = "0.7.9", default-features = false }
anyhow = { workspace = true }
async-trait = "0.1.88"
dotenvy = "0.15.7"
evm-state-types = { workspace = true }
evm-storage-proofs = { workspace = true }
serde_json = { workspace = true }
storage = { workspace = true }
tokio = { workspace = true }
tokio-stream = { version = "0.1.17", default-features = false }
url = { version = "2.5", default-features = false }
