[package]
name = "evm-storage-proofs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
alloy-primitives = { workspace = true }
alloy = { version = "1.0.27", features = ["full"], optional = true }
alloy-rpc-types = { version = "1.0.27", default-features = false }
tokio = { version = "1.45.0", features = [
    "sync",
    "macros",
    "io-util",
    "rt",
    "time",
    "rt-multi-thread",
], default-features = false, optional = true }
alloy-rlp = { version = "0.3.12", default-features = false }
alloy-trie = { version = "0.9.1", default-features = false }

[features]
alloy = ["dep:alloy", "dep:tokio"]
debug = []
