[workspace]
members = [
    "ev-exec/guest",
    "ev-exec/host",
    "ev-hyperlane/guest",
    "ev-hyperlane/host",
    "ev-range-exec/guest",
    "ev-range-exec/host",
]
resolver = "2"

[workspace.dependencies]
# RISC0 dependencies
risc0-build = "3.0.3"
risc0-zkvm = "3.0.3"

# Zeth for EVM execution (RISC0-compatible)
zeth-core = { path = "../../../zeth/crates/core" }
zeth-chainspec = { path = "../../../zeth/crates/chainspec" }

# Reth (version 1.7.0 compatible with Zeth)
reth-primitives-traits = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.7.0" }
reth-ethereum-primitives = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.7.0" }

# Alloy
alloy-primitives = { version = "1.3.1", default-features = false }
alloy-consensus = { version = "1.0.30", default-features = false }
alloy-rlp = { version = "0.3.10", default-features = false }

# Celestia dependencies (from parent workspace)
celestia-types = "=0.15.0"
tendermint = "0.40.1"
nmt-rs = "*"

# Crypto
ed25519-dalek = { version = "2.1.0", features = ["alloc", "serde"] }
k256 = { version = "0.13", features = ["serde", "pem"] }

# Serialization
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_cbor = "0.11.2"
bincode = "1.3.3"
prost = "0.12"
bytes = "1.10.1"
hex = "0.4.3"

# Shared types (relative path to parent workspace crate)
ev-zkevm-types = { path = "../ev-zkevm-types" }

[patch.crates-io]
# RISC0 crypto patches for optimized cryptographic operations
# See: https://dev.risczero.com/api/zkvm/precompiles
blst = { git = "https://github.com/risc0/blst", tag = "v0.3.15-risczero.1" }
c-kzg = { git = "https://github.com/risc0/c-kzg-4844", tag = "c-kzg/v2.1.1-risczero.1" }
crypto-bigint = { git = "https://github.com/risc0/RustCrypto-crypto-bigint", tag = "v0.5.5-risczero.0" }
k256 = { git = "https://github.com/risc0/RustCrypto-elliptic-curves", tag = "k256/v0.13.4-risczero.1" }
sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.10.9-risczero.0" }
substrate-bn = { git = "https://github.com/risc0/paritytech-bn", tag = "v0.6.0-risczero.0" }
tiny-keccak = { git = "https://github.com/risc0/tiny-keccak", tag = "tiny-keccak/v2.0.2-risczero.0" }
