[package]
name = "storage"
version = "0.1.0"
edition = "2024"

[features]
test = []

[dependencies]
anyhow = { workspace = true }
bincode = { workspace = true }
dotenvy = "0.15.7"
evm-hyperlane-types-sp1 = { workspace = true }
evm-state-types = { workspace = true }
hex = { workspace = true }
rocksdb = "0.24.0"
serde = { workspace = true }
tokio = { workspace = true }
