[package]
name = "storage"
version = "0.1.0"
edition = "2024"

[features]
test = []

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
bincode = { workspace = true }
dirs = "5.0.1"
dotenvy = "0.15.7"
ev-zkevm-types = { workspace = true }
hex = { workspace = true }
rocksdb = "0.24.0"
serde = { workspace = true }
sp1-sdk = { workspace = true }
thiserror = "1.0"
tokio = { workspace = true }
