[package]
version = "0.1.0"
name = "evm-exec-types"
edition = "2021"

[dependencies]
bincode = { workspace = true }
eq-common = { workspace = true }
hex = { workspace = true }
nmt-rs = { workspace = true }
serde = { workspace = true }
sp1-sdk = { workspace = true }
tendermint = { workspace = true }
