[package]
name = "evm-hyperlane-types"
version = "0.1.0"
edition = "2024"

[dependencies]
evm-storage-proofs = { workspace = true }
evm-state-types = { workspace = true }
alloy-primitives = { workspace = true }
sha3 = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
hex = "0.4.3"
borsh = { version = "1.5.7", features = ["derive"] }
