[package]
name = "evm-hyperlane-types"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy-primitives = { workspace = true }
anyhow = { workspace = true }
borsh = { version = "1.5.7", features = ["derive"] }
evm-state-types = { workspace = true }
evm-storage-proofs = { workspace = true }
hex = "0.4.3"
serde = { workspace = true }
sha3 = { workspace = true }
