[package]
name = "evm-hyperlane-types"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy-primitives = { workspace = true }
anyhow = { workspace = true }
evm-state-types = { workspace = true }
evm-storage-proofs = { workspace = true }
hex = { workspace = true }
serde = { workspace = true }
sha3 = { workspace = true }
