[package]
name = "ev-exec-guest"
version = "0.1.0"
edition = "2021"

[dependencies]
risc0-zkvm = { workspace = true, default-features = false, features = ["std"] }
zeth-core = { workspace = true }
zeth-chainspec = { workspace = true }
celestia-types = { workspace = true }
tendermint = { workspace = true }
nmt-rs = { workspace = true }
ed25519-dalek = { workspace = true }
serde = { workspace = true }
serde_cbor = { workspace = true }
bincode = { workspace = true }
prost = { workspace = true }
bytes = { workspace = true }
hex = { workspace = true }
alloy-consensus = { workspace = true }
alloy-primitives = { workspace = true }
alloy-rlp = { workspace = true }
